2012-06-13  Albert Graef  <Dr.Graef@t-online.de>

	* 0.12 release

2012-06-11  Albert Graef  <Dr.Graef@t-online.de>

	* pure-gnm/pure-gnm.pure: Add a script which generates plugin.xml
	files from plugin scripts.

2012-06-07  Albert Graef  <Dr.Graef@t-online.de>

	* pure-loader/pure-loader.c: Allow all loaded Pure scripts to be
	edited instead of just the last one.

2012-06-06  Albert Graef  <Dr.Graef@t-online.de>

	* pure-loader/pure-loader.c: Some substantial improvements in the
	handling of plugin scripts. Plugin scripts may now be specified in
	the plugin.xml with a pathname so that they can be installed in
	any directory (not necessarily the plugin directory).

	The pathname may either start with ~/, in which case it is taken
	relative to the user's home directory, or it may be an absolute
	pathname which is taken as is. Other pathnames are interpreted
	relative to the plugin directory (i.e., the directory containing
	the plugin.xml file).

	The pathname *must* now be specified with the proper filetype; the
	.pure suffix is *not* added automatically any more.

	In addition, the plugin script now gets loaded in the *script*
	directory (which may be different from both gnumeric's cwd and the
	plugin directory), so that it can find other files that it may
	need.

2011-03-04  Albert Graef  <Dr.Graef@t-online.de>

	* pure-loader/pure-loader.c (pure_async_func_init): Add proper
	exception handling to the child process for asynchronous data
	sources. This fixes a bug which causes spurious extra datasources
	to be created in the child process if a datasource bails out with
	a Pure exception.

2010-10-23  Albert Graef  <Dr.Graef@t-online.de>

	* 0.8 release

2010-04-17  Albert Graef  <Dr.Graef@t-online.de>

	* pure-loader/pure-gnumeric.c: Gnumeric 1.10 compatibility
	fixes. Resolves issue #26 reported by asitdepends.

2009-10-09  Albert Graef  <Dr.Graef@t-online.de>

	* Makefile, pure-loader/pure-gnumeric.c,
	pure-loader/pure-loader.c: Various windows compatibility