@@ -1,3 +1,13 @@
+2013-09-01  Albert Graef  <aggraef@gmail.com>
+
+	* Makefile, examples/*/Makefile, pure-loader/pure-loader.c:
+	Various fixes for compatibility with Gnumeric 1.12. NOTE: This
+	version won't compile with Gnumeric <= 1.10 any more because of
+	changes in the Gnumeric plugin API. It also doesn't support OpenGL
+	rendering, because this code hasn't been ported to GTK3 yet. So if
+	you need Gnumeric 1.10 or OpenGL support then you'll have to stick
+	to version 0.12 for now.
+
 2012-06-13  Albert Graef  <Dr.Graef@t-online.de>
 
 	* 0.12 release
